--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "mitt": "^2.1.0",
+    "node-sass": "^5.0.0",
+    "primeflex": "^2.0.0",
+    "primeicons": "^4.1.0",
+    "primevue": "^3.1.2",
+    "sass-loader": "^10.1.1",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
+    "vue-custom-element": "^3.2.14",
+    "vue-draggable-next": "^2.0.1",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
@@ -18,7 +25,6 @@
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
